navbar alignment fix

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -26,6 +26,7 @@ a {
 .navbar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 15px;
 
   img {
